# repro-vuln-pkg-multi-level

./: README.md  pyproject.toml
subrepo2/: pyproject.toml
