[tool.poetry]
name = "repro-vuln-pkg-multi-level"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Jinja2 = "2.8"
flask = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
